# stm32f103-cubemx-zero-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
app/: board.c  board.h  init.c  interrupts.c  main.c  opaque.c  opaque.h  tusb_config.h  usb_descriptors.c
bsp/: board.c  board.h  interrupts.c
bsp/cubemx/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
config/: lame-config.h  lame_soft_config.h
core/: init.c  main.c  usb_descriptors.c
cubemx/: CMakeLists.txt
cubemx/cmake/: cmsis.cmake  cubemx_get_st_hal_files.cmake  st_hal_config.cmake
cubemx/cmake/targets/: cmsis.cmake  st_hal_config.cmake
drivers/bsp/: board.c  board.h  st_hal.h
drivers/cubemx/: README.md  cubemx.h
hardware/cubemx/: .gitignore
lib/lame/cmake-lib/include/st_hal/: st_hal.h
lib/lame/device/: CMakeLists.txt  led.c
lib/lame/device-lib/: CMakeLists.txt
lib/lame/device-lib/inc/lame/: Led.h  led.h
lib/lame/device-lib/src/: Led.c  led.c
lib/lame/drivers/: CMakeLists.txt  pin_driver.h
lib/lame/drivers-lib/: CMakeLists.txt
lib/lame/drivers-lib/inc/lame/: Pin.h  mSec.h
lib/lame/drivers-lib/inc/lame/drivers/: Pin_Driver.h  pin_driver.h
lib/lame/drivers-lib/inc/lame/impl/: Pin_Impl.h
lib/lame/drivers-lib/src/: Pin.c  mSec.c  pin_driver.c
lib/lame/lame-c/: CMakeLists.txt
lib/lame/lame-c/src/: event.c
lib/lame/lame-hw/: CMakeLists.txt  led.h
lib/lame/lame-hw/device/: led.h
lib/lame/lame-hw/drivers/: led_driver.c  led_driver.h  pin_driver.c  pin_driver.h
lib/lame/lame_cmakelib/: CMakeLists.txt
lib/lame/soft-lib/: CMakeLists.txt
lib/lame/soft-lib/inc/lame/: Event.h  SoftTimer.h  event.h  types.h
lib/lame/soft-lib/src/: Event.c  SoftTimer.c
stm32cubemx/: CMakeLists.txt  stm32cubemx.h
